--- a/PrasentationLayer/appsettings.json
+++ b/PrasentationLayer/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBCS": "Data Source=.;Initial Catalog=ComplaintMonitoringSystem;Integrated Security=True;"
+     "DBCS": "Data Source=.;Initial Catalog=ComplaintMonitoringSystem;Integrated Security=True;"
+    //"DBCS": "Data Source=tcp:prasentationlayerdbserver.database.windows.net,1433;Initial Catalog=PrasentationLayer_db;User Id=MLI1135@prasentationlayerdbserver;Password=Ayesha@18"
   },
   "JWT": {
     "ValidAudience": "https://localhost:7152",
